fix: estimated value overflow

--- a/apps/platform/src/components/inputs/input-number/InputNumber.module.scss
+++ b/apps/platform/src/components/inputs/input-number/InputNumber.module.scss
@@ -144,3 +144,8 @@
   display: flex;
   gap: 8px;
 }
+
+.estimated_value {
+  max-width: 41%;
+  overflow: hidden;
+}
